# btc-2009-prng-recovery-bruteforce

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
cache/cache/include/: entropy_pipeline_cache.hpp
quick start/: __init__.py  compilation.py  start.py
src/core/: __init__.py  entropy_cache.cpp  entropy_engine.cpp  entropy_engine.hpp  entropy_engine_bindings.cpp  orchestrator.cpp  orchestrator.h  pybind11_wrapper.cpp  rand_add.cpp  rand_add.h
src/launch/: main_loop.py
src/monitor/: __init__.py  app_core.py  desktop_launcher.py  event_handlers.py  gradio_app.py  ui_builder.py
src/monitor/_cpp/: CMakeLists.txt  __init__.py  build.sh  final_stats.py  final_stats_wrapper.py  live_stats.py  live_stats_wrapper.py  log_parser_wrapper.py  manual_build.sh  match_notifier.py  match_notifier_wrapper.py  metrics_wrapper.py  plugin_base.py  plugin_base_wrapper.py
src/monitor/_cpp/bindings/: final_stats_plugin_bindings.cpp  live_stats_plugin_bindings.cpp  match_notifier_plugin_bindings.cpp  plugin_base_bindings.cpp
src/monitor/_cpp/include/: final_stats_plugin.hpp  live_stats_plugin.hpp  match_notifier_plugin.hpp  plugin_base.hpp  ring_buffer.hpp
src/monitor/_cpp/src/: final_stats_plugin.cpp  live_stats_plugin.cpp  match_notifier_plugin.cpp  plugin_base.cpp
src/monitor/factories/: __init__.py  plugin_factory.py
src/monitor/integrations/: __init__.py  launch_integration.py
src/monitor/plugins/: __init__.py  list_selector.py
src/monitor/ui/: __init__.py  components.py  themes.py
src/monitor/utils/: __init__.py  html_generators.py  signal_handler.py
src/monitor_cpp/bindings/: final_stats_plugin_bindings.cpp  live_stats_plugin_bindings.cpp  log_parser_bindings.cpp  match_notifier_plugin_bindings.cpp  metrics_bindings.cpp  plugin_base_bindings.cpp
src/monitor_cpp/core/: metrics.cpp  metrics.hpp
src/monitor_cpp/integrations/: log_parser.cpp  log_parser.hpp
src/monitor_cpp/plugins/: final_stats_plugin.cpp  final_stats_plugin.hpp  live_stats_plugin.cpp  live_stats_plugin.hpp  match_notifier_plugin.cpp  match_notifier_plugin.hpp  plugin_base.cpp  plugin_base.hpp
src/plugins/cpu/: __init__.py
src/plugins/cpu/bitmap/: __init__.py  bitmap_generator.hpp  getbitmaps.cpp  getbitmaps.h  pybind11_wrapper.cpp
src/plugins/cpu/rand_poll/: __init__.py  poll.cpp  poll.h  pybind11_wrapper.cpp  rand_poll_fallback.hpp
src/plugins/cpu/randaddseed/: QueryPerformanceCounter.cpp  QueryPerformanceCounter.h  hkey_performance_data.cpp  hkey_performance_data.h  hkey_performance_data.txt  pybind11_wrapper.cpp
src/plugins/crypto/ecdsa_keys/: __init__.py  ecdsa_keys.cpp  ecdsa_keys.h  ecdsa_keys.py  interface.py  pybind11_wrapper.cpp
src/plugins/wallet/address_matcher/: __init__.py  address_matcher.cpp  address_matcher.h  pybind11_wrapper.cpp
src/plugins/wallet/batch_gen/: __init__.py  batch_gen.cpp  batch_gen.h  pybind11_wrapper.cpp
src/plugins/wallet/monitor/: __init__.py  monitor.py  observer.py  progress.py  stats.py
src/plugins/wallet/wallet_dat/: __init__.py  pybind11_wrapper.cpp  wallet_dat.cpp  wallet_dat.h  wallet_settings.cpp  wallet_settings.h  wallet_tx.cpp  wallet_tx.h
src/plugins/wallet/wallet_dat/berkeley_db/: berkeley_db.cpp  berkeley_db.h
src/plugins/wallet/wallet_dat/crypto/: blowfish.cpp  blowfish.h
src/wrapper/: __init__.py  unified_interface.py
src/wrapper/core/: __init__.py  base.py  exceptions.py  logger.py
src/wrapper/docs/: README.md
src/wrapper/entropy/: __init__.py  entropy_engine.py  getbitmaps_source.py  hkey_source.py  rand_poll_source.py
src/wrapper/examples/: basic_usage.py
src/wrapper/snapshot/: __init__.py  constants.py  gen_log.py  gen_snapshot.py  snapshot_io.py
